AccountLayout - Fix overflowing container

--- a/src/components/AccountLayout/AccountLayout.css
+++ b/src/components/AccountLayout/AccountLayout.css
@@ -1,4 +1,5 @@
 .accountLayout-container {
+  min-height: 90vh;
   .accountLayout-title {
     font-size: 20px;
     margin-top: 50px;
